--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,13 @@ spring.servlet.multipart.enabled=true
 ##spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+#Mail config
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=javaForTest2018@gmail.com
+spring.mail.password=forTest2018
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 file.upload.dir=C:\\Users\\Hov\\Desktop\\GIT JAVA\\image-gallery\\upload
+
